@@ -1,3 +1,7 @@
+2004-03-10  Kei Sakamoto   <sakamoto.kei@renesas.com>
+
+	* remote-m32r-sdi.c: Support hardware watchpoint.
+
 2004-03-09  Daniel Jacobowitz  <drow@mvista.com>
 
 	* user-regs.c: Update copyright years.
